--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
       padding: 0;
       box-sizing: border-box;
       font-family: Arial, sans-serif;
-
     }
 
     body {
@@ -756,6 +755,10 @@ color: #47290e;
       height: auto;
      }
     }
+
+    .navdiv{
+      margin: auto;
+    }
   
  
     </style>
@@ -767,7 +770,8 @@ color: #47290e;
  
 
 
-  <nav class="navbar">
+ <div class="navdiv">
+   <nav class="navbar">
     <!-- Logo -->
     <div class="logo">c<span>o</span>mpatto</div>
 
@@ -789,6 +793,7 @@ color: #47290e;
       <span></span>
     </div>
   </nav>
+ </div>
 
   <section class="hero">
     <div class="hero-content">
